--- a/shredder-ec2/src/main/resources/reference.conf
+++ b/shredder-ec2/src/main/resources/reference.conf
@@ -1,8 +1,68 @@
-sqs_prefix = asg-spinnaker-myapp
+app_name = myapp
+app_name = ${?SHREDDER_APP_NAME}
+
+aws.enabled = true
+aws.enabled = ${?AWS_ENABLED}
+
+sqs_prefix = "asg-spinnaker-"${app_name}
 sqs_prefix = ${?SHREDDER_SQS_PREFIX}
 
-topic = spinnaker-shutdowns-pending
+topic = spinnaker-lifecycle-pending
 topic = ${?SHREDDER_SNS_TOPIC}
 
 shutdown_scripts_path = /opt/shutdown-scripts/
 shutdown_scripts_path = ${?SHREDDER_SHUTDOWN_SCRIPTS_PATH}
+
+shutdown_scripts_priority = ${?SHREDDER_SHUTDOWN_SCRIPTS_PRIORITY}
+
+shutdown_wait_time_if_failure = 3d
+shutdown_wait_time_if_failure = ${?SHREDDER_SHUTDOWN_WAIT_TIME_IF_FAILURE}
+
+startup {
+  mode = "run-startup-scripts" # or "wait-external-http-signal"
+  mode = ${?SHREDDER_STARTUP_MODE}
+
+  external_signal {
+    http.port = 8070
+    timeout = 20m
+    timeout = ${?SHREDDER_EXTERNAL_SIGNAL_TIMEOUT}
+  }
+}
+
+startup_scripts_path = /opt/startup-scripts/
+startup_scripts_path = ${?SHREDDER_STARTUP_SCRIPTS_PATH}
+
+startup_scripts_priority = ${?SHREDDER_STARTUP_SCRIPTS_PRIORITY}
+
+startup_persist_result_file = "/usr/local/demdex/shredder-ec2/config/shredder-startup-result.txt"
+startup_persist_result_file = ${?SHREDDER_STARTUP_RESULT_FILE}
+
+shutdown_on_startup_fail = true
+shutdown_on_startup_fail = ${?SHREDDER_SHUTDOWN_ON_STARTUP_FAIL}
+
+log_paths = "/var/log/demdex/shredder-ec2, /var/log/cloud-init-output.log"
+log_paths = ${?SHREDDER_LOG_PATHS}
+
+script_output_path = "/var/log/demdex/shredder-ec2/command_output.log"
+script_output_path = ${?SCRIPT_OUTPUT_PATH}
+
+remote_log_destination = s3 # set to "noop" or empty string to disable
+remote_log_destination = ${?SHREDDER_REMOTE_LOG_DESTINATION}
+
+environment = stage
+environment = ${?SHREDDER_ENVIRONMENT}
+
+remote_log_s3_bucket = "aam-shredder-"${environment}
+remote_log_s3_bucket = ${?SHREDDER_REMOTE_LOG_S3_BUCKET}
+
+remote_log_s3_region = "us-east-1"
+remote_log_s3_region = ${?SHREDDER_REMOTE_LOG_S3_REGION}
+
+remote_log_s3_prefix = ${app_name}
+remote_log_s3_prefix = ${?SHREDDER_REMOTE_LOG_PATH}
+
+send_cloud_watch_metrics = true
+send_cloud_watch_metrics = ${?SHREDDER_SEND_CLOUD_WATCH_METRICS}
+
+cloud_watch_namespace = "Edge/Shredder"
+cloud_watch_namespace = ${?SHREDDER_CLOUD_WATCH_NAMESPACE}
