--- a/shredder-ec2/src/main/resources/wrapper/ec2shredder_wrapper.conf
+++ b/shredder-ec2/src/main/resources/wrapper/ec2shredder_wrapper.conf
@@ -68,7 +68,7 @@ wrapper.java.additional.auto_bits=TRUE
 
 # Java Additional Parameters
 wrapper.java.additional.1=-Dlogback.configurationFile=%CONF_DIR%/logback-prod.xml
-wrapper.java.additional.2=-DSHREDDER_CONFIG_FILE=/usr/local/demdex/conf/dcs/shutdown.conf
+wrapper.java.additional.2=-DSHREDDER_CONFIG_FILE=%CONF_DIR%/reference.conf
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=3
