--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects {
         mavenCentral()
     }
 
+    
     dependencies {
         compile 'com.typesafe:config:1.3.1'
         compile "com.google.inject:guice:4.1.0"
@@ -40,11 +41,10 @@ subprojects {
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
         compile "ch.qos.logback:logback-classic:1.2.3"
-
-        compile "com.amazonaws:aws-java-sdk-ec2:1.11.221"
-        compile "com.amazonaws:aws-java-sdk-sqs:1.11.221"
-        compile "com.amazonaws:aws-java-sdk-sns:1.11.221"
-        compile "com.amazonaws:aws-java-sdk-autoscaling:1.11.221"
+        compile "com.amazonaws:aws-java-sdk-ec2:1.11.389"
+        compile "com.amazonaws:aws-java-sdk-sqs:1.11.389"
+        compile "com.amazonaws:aws-java-sdk-sns:1.11.389"
+        compile "com.amazonaws:aws-java-sdk-autoscaling:1.11.389"
         compile "org.json:json:20171018"
 
         // spock & junit
@@ -57,65 +57,67 @@ subprojects {
 
 
 
-project (':shredder-core') {
-    version = VERSION_NAME
-    group = GROUP
+subprojects {
+    if (project.name.startsWith("shredder-core")) {
+        version = VERSION_NAME
+        group = GROUP
 
-    task javadocJar(type: Jar) {
-        classifier = 'javadoc'
-        from javadoc
-    }
+        task javadocJar(type: Jar) {
+            classifier = 'javadoc'
+            from javadoc
+        }
 
-    task sourcesJar(type: Jar) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
+        task sourcesJar(type: Jar) {
+            classifier = 'sources'
+            from sourceSets.main.allSource
+        }
 
-    artifacts {
-        archives javadocJar, sourcesJar
-    }
+        artifacts {
+            archives javadocJar, sourcesJar
+        }
 
-    signing {
-        sign configurations.archives
-    }
+        signing {
+            sign configurations.archives
+        }
 
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+        uploadArchives {
+            repositories {
+                mavenDeployer {
+                    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                    authentication(userName: "$NEXUS_USERNAME", password: "$NEXUS_PASSWORD")
-                }
-
-                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                    authentication(userName: "$NEXUS_USERNAME", password: "$NEXUS_PASSWORD")
-                }
-
-                pom.project {
-                    name 'Shredder-for-EC2'
-                    packaging 'jar'
-                    // optionally artifactId can be defined here
-                    description "A Java daemon service that can perform graceful shutdowns for AWS EC2 instances in an Auto Scaling Group (ASG)."
-                    url 'https://github.com/adobe/shredder'
-
-                    scm {
-                      connection 'scm:git:https://github.com/adobe/shredder.git'
-                      developerConnection 'scm:git:git@github.com/adobe/shredder.git'
-                      url 'https://github.com/adobe/shredder.git'
+                    repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                        authentication(userName: "$NEXUS_USERNAME", password: "$NEXUS_PASSWORD")
                     }
 
-                    licenses {
-                        license {
-                            name 'The Apache License, Version 2.0'
-                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                        authentication(userName: "$NEXUS_USERNAME", password: "$NEXUS_PASSWORD")
+                    }
+
+                    pom.project {
+                        name 'Shredder-for-EC2'
+                        packaging 'jar'
+                        // optionally artifactId can be defined here
+                        description "A Java daemon service that can perform graceful shutdowns for AWS EC2 instances in an Auto Scaling Group (ASG)."
+                        url 'https://github.com/adobe/shredder'
+
+                        scm {
+                          connection 'scm:git:https://github.com/adobe/shredder.git'
+                          developerConnection 'scm:git:git@github.com/adobe/shredder.git'
+                          url 'https://github.com/adobe/shredder.git'
                         }
-                    }
 
-                    developers {
-                        developer {
-                            id 'costimuraru'
-                            name 'Constantin Muraru'
+                        licenses {
+                            license {
+                                name 'The Apache License, Version 2.0'
+                                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            }
+                        }
+
+                        developers {
+                            developer {
+                                id 'costimuraru'
+                                name 'Constantin Muraru'
+                            }
                         }
                     }
                 }
