--- a/shredder-ec2/src/main/resources/reference.conf
+++ b/shredder-ec2/src/main/resources/reference.conf
@@ -15,7 +15,7 @@ shutdown_scripts_path = ${?SHREDDER_SHUTDOWN_SCRIPTS_PATH}
 
 shutdown_scripts_priority = ${?SHREDDER_SHUTDOWN_SCRIPTS_PRIORITY}
 
-shutdown_scripts_timeout = 3600000
+shutdown_scripts_timeout = 1h
 shutdown_scripts_timeout = ${?SHREDDER_SHUTDOWN_SCRIPTS_TIMEOUT}
 
 shutdown_wait_time_if_failure = 3d
@@ -37,7 +37,7 @@ startup_scripts_path = ${?SHREDDER_STARTUP_SCRIPTS_PATH}
 
 startup_scripts_priority = ${?SHREDDER_STARTUP_SCRIPTS_PRIORITY}
 
-startup_scripts_timeout = 3600000
+startup_scripts_timeout = 1h
 startup_scripts_timeout = ${?SHREDDER_STARTUP_SCRIPTS_TIMEOUT}
 
 startup_persist_result_file = "/usr/local/demdex/shredder-ec2/config/shredder-startup-result.txt"
