Fix: The startup/shutdown script timeout is not configurable and it's… fixes #9 (#10)
* Fix: The startup/shutdown script timeout is not configurable and it's set to 1h

--- a/shredder-ec2/src/main/resources/reference.conf
+++ b/shredder-ec2/src/main/resources/reference.conf
@@ -15,6 +15,9 @@ shutdown_scripts_path = ${?SHREDDER_SHUTDOWN_SCRIPTS_PATH}
 
 shutdown_scripts_priority = ${?SHREDDER_SHUTDOWN_SCRIPTS_PRIORITY}
 
+shutdown_scripts_timeout = 1h
+shutdown_scripts_timeout = ${?SHREDDER_SHUTDOWN_SCRIPTS_TIMEOUT}
+
 shutdown_wait_time_if_failure = 3d
 shutdown_wait_time_if_failure = ${?SHREDDER_SHUTDOWN_WAIT_TIME_IF_FAILURE}
 
@@ -33,6 +36,9 @@ startup_scripts_path = /opt/startup-scripts/
 startup_scripts_path = ${?SHREDDER_STARTUP_SCRIPTS_PATH}
 
 startup_scripts_priority = ${?SHREDDER_STARTUP_SCRIPTS_PRIORITY}
+
+startup_scripts_timeout = 1h
+startup_scripts_timeout = ${?SHREDDER_STARTUP_SCRIPTS_TIMEOUT}
 
 startup_persist_result_file = "/usr/local/demdex/shredder-ec2/config/shredder-startup-result.txt"
 startup_persist_result_file = ${?SHREDDER_STARTUP_RESULT_FILE}
