--- a/sample-cleanup/build.gradle
+++ b/sample-cleanup/build.gradle
@@ -44,7 +44,7 @@ ospackage {
     packageDescription "Adobe Audience Manager - ${project.name}"
 
     requires('java-service-wrapper')
-    requires('jdk')
+    requires('java-11-openjdk')
     preInstall file('pkg_scripts/preInstall.sh')
     postInstall file('pkg_scripts/postInstall.sh')
 
