Fix: Switch the RPM/DEB packages requirements from Oracle JDK to OpenJDK for shredder-ec2

--- a/shredder-ec2/build.gradle
+++ b/shredder-ec2/build.gradle
@@ -57,7 +57,7 @@ ospackage {
     packageDescription "Adobe Audience Manager - ${project.name}"
 
     requires('java-service-wrapper')
-    requires('jdk')
+    requires('java-1.8.0-openjdk')
     preInstall file('pkg_scripts/preInstall.sh')
     postInstall file('pkg_scripts/postInstall.sh')
 
